# pfx-stripfriendlyname

./: .gitignore  CMakeLists.txt  stripfriendlyname.c
